# carrot

./: .gitignore  AST.hs  Eval.hs  LICENSE  NeoParse.hs  Object.hs  Parse.hs  README.md  Tokenize.hs  carrot.cabal  fib.cr  main.hs
app/: main-fix.hs
src/: AST.hs  Eval.hs  NeoParse.hs  Object.hs  Parser.hs  Tokenize.hs  ip.hs
